[gd_scene load_steps=3 format=3 uid="uid://dcgyvb30a5yst"]

[ext_resource type="Script" uid="uid://bgeqh1g0cfrai" path="res://HUD.gd" id="1_efote"]
[ext_resource type="FontFile" uid="uid://c3ml4qd47xgoi" path="res://dodge_the_creeps_2d_assets/fonts/Xolonium-Regular.ttf" id="2_vow1y"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_efote")

[node name="scoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="messageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -192.5
offset_right = 170.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 60
text = "Dodge The Creeps!!!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = 180.5
offset_right = 83.0
offset_bottom = 261.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_message_timer_timeout"]
